@@ -22,7 +22,7 @@ severity=minor
 
 
 
-status=open
+status=fixed
 
 
 
