@@ -2,13 +2,14 @@
 Hash: SHA1
 
 DIST rednose-0.1.4.tar.gz 5357 RMD160 4a1c861a3b5386f703dd9e8f2f7c777b71fd14ea SHA1 4e020e36a7b8132e982958415464ab0f7dfee4f0 SHA256 beeb29a758ae9968191cd0df68eaec910b02910f44206bf0a3d9867e8099eebd
+EBUILD rednose-0.1.4-r1.ebuild 457 RMD160 c25ca6f47d7507e4a572d201311bfb16b5adb78a SHA1 a47aac3f2429a1d9fe1ff3c21436c42d2a97a3c4 SHA256 457305d13ea1c1275a450e417d1cba462406eb82a3f43d9891d91a04985aae21
 EBUILD rednose-0.1.4.ebuild 346 RMD160 14b543f4d49a728bdede7ecf8924f463a307d172 SHA1 e130e0291e7f5b6d06ead5141c8cc0e0dee6c955 SHA256 80ea32867882aa94ee7e0d7be0266c8b98724cd1eef7a19455710715afe180cd
-MISC ChangeLog 561 RMD160 36bbb757b0e873b3ba62bd3fe1881bd3c0722b02 SHA1 47d17f942000cfb4309037245f0576302c4ec676 SHA256 996eb047925a216876a26cb8354cfae87f6412a2dea755ef09815926797448ff
+MISC ChangeLog 704 RMD160 a03487205972550bbe0881e5bffe6ef095aff6f8 SHA1 6d1a03b079b0967aa67f6073581672d81a1efd5d SHA256 81cb1a3de21ade97a86aca3a4c82f2faf83cbef792def1d50df36da122df09ce
 MISC metadata.xml 534 RMD160 85fddc0f33e2da9b1bd40141ff64de550465d24e SHA1 0f9edb5b193edb2f50a7c8b3d0e76d6f7cc6abac SHA256 3d4a27dafe6624e0322ac3709e851cbb633a6baa63ef64faf2b6839b52927f65
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrYtCwACgkQzJrj3cAXR0l26gCfT1E0GLIk/9GYWkaEItCCpui3
-e3MAni5vhdg9TeLLdReu9KFoG88b1rwx
-=g60y
+iEYEARECAAYFAkrYt+kACgkQzJrj3cAXR0kvVwCfXaRhxZVqdC7lY18botWFC9eB
+FeYAmwRhA3HBlybB7YOstBkuXkbtpdCI
+=Y8Ha
 -----END PGP SIGNATURE-----
