@@ -1,0 +1,22 @@
+dev-python/setuptools >=app-admin/eselect-python-20090804 >=app-shells/bash-3.2 virtual/python
+dev-python/nose dev-python/termstyle virtual/python
+0
+http://pypi.python.org/packages/source/r/rednose/rednose-0.1.4.tar.gz
+
+http://github.com/gfxmonk/rednose/
+BSD
+coloured output for nosetests
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+
+
+
+
+
+
+compile install postinst postrm unpack
+
+
+
+
+
