@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rednose-0.1.4-r1 (16 Oct 2009)
+
+  16 Oct 2009; <jay@gentoo.org> +rednose-0.1.4-r1.ebuild:
+  Don't install a private copy of termstyle [c3f].
+
   16 Oct 2009; <jay@gentoo.org> rednose-0.1.4.ebuild:
   Use new style GitHub URLs for homepage.
 
